# DeepValueAI

./: .env.example  .gitignore  =0.5  =4.30  Makefile  README.md  notebook_curso_deepvalue.ipynb  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: page_analyzer.py  page_backtesting.py  page_screener.py  streamlit_app.py
core/: __init__.py  backtesting_engine.py  config.py  data_service.py  drift_monitor.py  fundamental_database.py  macro_database.py  news_database.py  prediction_service.py  screener_engine.py  sentiment_pipeline.py
data/macro/: macro_features.parquet
data/news/: headlines_raw.parquet  sentiment_scores.parquet
ml_pipeline/: generate_dataset.py  train_model.py
models/: best_model.pkl  model_comparison.csv  optimal_threshold.txt
tests/: conftest.py  test_backtesting_engine.py  test_config.py  test_data_service.py  test_drift_monitor.py  test_macro_database.py  test_prediction_service.py  test_screener_engine.py  test_sentiment_pipeline.py
