[project]
name = "deepvalue-ai"
version = "2.0.0"
description = "Intelligent asset selection system combining fundamental analysis with ML"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Giancarlos Estévez"}]
readme = "README.md"

# ---------------------------------------------------------------
# Production dependencies
# Libraries the application needs to run.
# Only direct imports are listed — pip resolves sub-dependencies.
# ---------------------------------------------------------------
dependencies = [
    "streamlit>=1.30",          # Interactive web dashboard
    "pandas>=2.0",              # Tabular data manipulation
    "numpy>=1.24",              # Numerical operations
    "yfinance>=0.2.30",         # Yahoo Finance API
    "pandas-ta>=0.3.14b1",      # Technical indicators (SMA, Williams %R)
    "scikit-learn>=1.3",        # ML framework: standard interface for all models
    "matplotlib>=3.7",          # Static charts
    "seaborn>=0.13",            # Statistical charts (confusion matrix)
    "plotly>=5.18",             # Interactive charts (Streamlit dashboard)
    "joblib>=1.3",              # Model serialization (.pkl)
    "simfin>=0.9",              # Historical fundamental data (SimFin bulk downloads)
    "pyarrow>=14.0",            # Parquet file format (fast, compressed storage)
    "beautifulsoup4>=4.12",     # HTML parsing (S&P 500 ticker list)
    "requests>=2.31",           # HTTP requests
    "lxml>=4.9",                # XML parser for pandas.read_html
    "fredapi>=0.5",             # FRED (Federal Reserve Economic Data) API
    "mlflow>=2.10",             # Experiment tracking and model registry
    "evidently>=0.4",           # Data and prediction drift monitoring
]

# ---------------------------------------------------------------
# Development dependencies
# Installed only with: pip install -e ".[dev]"
# Not needed in production.
# ---------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=7.4",              # Testing framework
    "ruff>=0.4",                # Linter + formatter (replaces flake8 + black)
]
nlp = [
    "transformers>=4.30",       # HuggingFace Transformers (FinBERT)
    "torch>=2.0",               # PyTorch (GPU inference on RTX 5070)
]

# ---------------------------------------------------------------
# Ruff configuration (linter)
# ---------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["core*", "ml_pipeline*", "app*"]

[tool.ruff]
target-version = "py310"        # Assumes Python 3.10+
line-length = 100               # Maximum 100 characters per line

[tool.ruff.lint]
select = [
    "E",    # Style errors (pycodestyle)
    "F",    # Logical errors (pyflakes)
    "I",    # Import ordering (isort)
    "UP",   # Syntax modernization (pyupgrade)
    "B",    # Common bugs (flake8-bugbear)
    "SIM",  # Simplifications (flake8-simplify)
]

# ---------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]           # Where to find tests
pythonpath = ["."]              # So imports work from project root
